<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:theme="@style/AppTheme.AppBarOverlay"
    tools:context="com.ascendlearning.jbl.uglys.activities.PFCorrectionCalculator">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.ascendlearning.jbl.uglys.views.CustomTextView
                android:id="@+id/pf_correction_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/title_activity_pf_correction_calculator"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView_pf_correction_calculator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_top"
        android:fillViewport="false"
        android:gravity="center"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/pf_correction_calculator_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/pf_correction_sub_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/epf_spinner"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp" />

                <Spinner
                    android:id="@+id/cpf_spinner"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:visibility="gone" />


                <com.ascendlearning.jbl.uglys.views.CustomTextView
                    android:id="@+id/pf_correction_result_header"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@android:color/black"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/to_find_result_header"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/result_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <com.ascendlearning.jbl.uglys.views.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pf"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <com.ascendlearning.jbl.uglys.views.CustomTextView
                        android:id="@+id/result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/pf_correction_sub_view"
                android:layout_marginTop="50dp">

                <ImageView
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/dividerline_onlightbkgd"
                    android:gravity="center_vertical" />

                <ImageView
                    android:id="@+id/relatedContent_imageview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bulldog_related_content"
                    android:gravity="center_vertical" />

                <com.ascendlearning.jbl.uglys.views.CustomTextView
                    android:id="@+id/bookname1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/relatedContent_imageview"
                    android:text="@string/book_name1"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/book_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bookname1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@id/relatedContent_imageview"
                    android:text="@string/book_location"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
